finish fix